--- a/Personal Website/projects.html
+++ b/Personal Website/projects.html
@@ -78,25 +78,31 @@
         <p>This challenged me mentally and physically having to plan, coordinate, and create this project.</p>
         <p>This was almost a year long proccess which take determination and grit.</p>
       </div>
-
-       <!-- ✅ Added: Design Thinking College Apparel -->
+      
+      <!-- ✅ Added: Design Thinking College Apparel -->
       <div class="project-card">
-        <a href="Design Thinking College Apparel of the Future Final Project.docx" target="_blank">
-          <img src="images/DesignThinkingFinalProject.png" alt="Design Thinking College Apparel" />
-        </a>
+        <div class="thumbnail-wrapper">
+          <a href="Design Thinking College Apparel of the Future Final Project.docx" target="_blank">
+            <img class="thumbnail-contain" src="images/DesignThinkingFinalProject.png" alt="Design Thinking College Apparel" />
+          </a>
+        </div>
         <h3>Design Thinking: College Apparel of the Future</h3>
         <p>A final project that applies design thinking to reimagine college apparel — from concept to prototypes and user testing.</p>
-        <p>Applied the full design thinking process—from empathy research to prototyping—to design inclusive, sustainable apparel, showcasing skills in user research, ideation, and iterative testing.p>
+        <p>Applied the full design thinking process—from empathy research to prototyping—to design inclusive, sustainable apparel, showcasing skills in user research, ideation, and iterative testing.</p>
+        <p style="text-align:center;"><a class="doc-link" href="Design Thinking College Apparel of the Future Final Project.docx" target="_blank" rel="noopener">Open document (DOCX)</a></p>
       </div>
 
       <!-- ✅ Added: High-Fidelity UI Design Interaction -->
       <div class="project-card">
-        <a href="High-Fidelity UI Design Interaction Design Final Project.docx" target="_blank">
-          <img src="images/FridgeFriends.png" alt="High-Fidelity UI Design Project" />
-        </a>
+        <div class="thumbnail-wrapper">
+          <a href="High-Fidelity UI Design Interaction Design Final Project.docx" target="_blank">
+            <img class="thumbnail-contain" src="images/FridgeFriends.png" alt="High-Fidelity UI Design Project" />
+          </a>
+        </div>
         <h3>High-Fidelity UI Design & Interaction</h3>
         <p>A final project showcasing high-fidelity mockups(15+) and interaction design patterns for a product experience. Demonstrating expertise in visual hierarchy, interactive components, and professional prototyping workflows.</p>
         <p>Covers prototype flows, usability findings, and interaction specifications used for development handoff.</p>
+        <p style="text-align:center;"><a class="doc-link" href="High-Fidelity UI Design Interaction Design Final Project.docx" target="_blank" rel="noopener">Open document (DOCX)</a></p>
       </div>
 
       <!-- ✅ Added: COVE UX Research Project -->
@@ -107,6 +113,7 @@
         <h3>COVE UX Research Project</h3>
         <p>A comprehensive UX research project focused on COVE, including interview guides, findings, and recommendations.</p>
         <p>Demonstrates research methods, led field observations and student interviews to uncover usability patterns, then synthesized findings through affinity mapping—strengthening my qualitative research, analysis, and user‑centered insight skills.</p>
+        <p style="text-align:center;"><a class="doc-link" href="Michael_Romanek_COVE_UX_Research_Project.docx" target="_blank" rel="noopener">Open document (DOCX)</a></p>
       </div>
     </div>
   </section>
@@ -116,4 +123,3 @@
   </footer>
 </body>
 </html>
-
